--- a/css/style.css
+++ b/css/style.css
@@ -563,6 +563,7 @@ background-color: rgb(181, 214, 239);
         max-width: 900px;
         padding: 20px;
         display: flex;
+        flex-wrap: wrap;
         justify-content: center;
         gap: 25px;
         margin: 20px auto;
@@ -658,8 +659,18 @@ background-color: rgb(181, 214, 239);
 
 /*------- resultados ------*/
 .contenedor-cards {
-
-        display: flex;
         flex-direction: column;
+        align-items: center;
+        padding: 10px;
 }
+
+.card-testimonio{
+    width: 100%;
+    max-width: 340px;
+}
+
+.card-testimonio img{
+    height: 200px;
+}
+
 }
