--- a/css/style.css
+++ b/css/style.css
@@ -571,7 +571,7 @@ background-color: rgb(181, 214, 239);
 
 .resultados-alumnos h2{
     margin-top: 15px;
-    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
     text-align: center;
     font-weight: 900;
     font-size: 32px;
