se separaron scss en diferentes índices para mayor organización al momento de seguir trabajando con sass

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -241,164 +241,7 @@ footer{
 
 /*----------"SOBRE MÍ"---------*/
 
-.sobre-mi-main{
-    background-color: rgb(204, 224, 224);
-}
-
-.titulo-sobre-mi{
-    font-size: 32px;
-    text-align: center;
-    margin: 16px;
-    font-weight: 700;
-}
-
-nav ul{
-    display: flex;
-    gap: 12px; 
-}
-
-.sobre-mi figcaption{
-    font-size: 16px;
-    text-align: center;
-    margin: 16px;
-}
-
-.sobre-mi figcaption p{
-    font-size: 1.1rem;
-  line-height: 1.7;
-  color: #444;
-  max-width: 600px;
-  margin: auto;
-}
-
-.sobre-mi figcaption p::first-letter{
-     font-size: 24px;
-     color: #799899;
-     font-weight: bold;
-}
-
-.como-trabajo{
-    text-align: center;
-    margin: 16px;
-    font-size: 24px;
-    font-weight: 700;
-}
-
-.trabajo-img img{
-  width: 100%;
-  max-width: 900px;
-  display: block;
-  margin: 30px auto;
-  border-radius: 16px;
-  box-shadow: 0 10px 25px rgba(0, 0, 0, 0.15);
-}
-
-.trabajo-img figcaption{
-    text-align: center;
-    background-color: rgb(224, 234, 239);
-    margin: 18px;
-    padding: 16px;
-    border-radius: 10px;
-}
-
-.mi-enfoque {
-    text-align: center;
-    Color: #222;
-    letter-spacing: 1px;
-    font-size: 24px;
-    font-weight: 700;
-}
-
-.enfoque-lista {
-    text-align: center;
-    list-style: none;
-    font-size: 1rem;
-    color: #1a1820;
-    margin-bottom: 16px;
-    list-style-position: inside;
-    padding: 0;
-    margin: 10px 0 0 0;
-}
-
-.palabra-personal{
-    background-color: rgb(233, 170, 230);
-    text-align: center;
-    margin: 16px;
-    padding: 16px;
-    border-radius: 10px;
-}
-
-/*-----------GRID----------*/
-
-.especialidades {
-  margin: 10px 5px;
-  padding: 20px 20px;
-  background-color: #f2f2f2;
-  border-radius: 16px;
-}
-
-.grid-bloques {
-  max-width: 1000px;
-  margin: auto;
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  gap: 20px;
-}
-
-/*---MOVILIDAD---*/
-
-.bloque-movilidad {
-    background-color: #cfe3e4;
-    border-radius: 12px;
-    padding: 16px;
-}
-
-.bloque-movilidad:hover{
-    transform: translate(-6px);
-    box-shadow: 0 8px 18px rgba(0,0,0,0.12); 
-}
-
-/*---RESISTENCIA---*/
-
-.bloque-resistencia {
-    background-color: #cfe3e4;
-    border-radius: 12px;
-    padding: 16px;
-}
-
-.bloque-resistencia:hover{
-    transform: translate(-6px);
-     box-shadow: 0 8px 18px rgba(0,0,0,0.12); 
-}
-
-/*---FUERZA---*/
-
-.bloque-fuerza {
-    background-color: #cfe3e4;
-    border-radius: 12px;
-    padding: 16px;
-}
-
-.bloque-fuerza:hover{
-    transform: translate(-6px);
-     box-shadow: 0 8px 18px rgba(0,0,0,0.12); 
-}
-
-
-/*---HABITOS---*/
-
-.bloque-habitos{
-    background-color: #cfe3e4;
-    grid-column: 1 / 4;
-    border-radius: 12px;
-    padding: 16px;
-
-}
-
-.bloque-habitos:hover {
-  transform: translateY(-6px);
-  box-shadow: 0 8px 18px rgba(0,0,0,0.12); 
-}
+@import "sobre-mi";
 
 
 /*----------"EMPEZAR" formulario HTML-------*/
@@ -407,141 +250,11 @@ nav ul{
 
 /*------------ PLANES -----------*/
 
-.seguimiento{
-    display: flex;
-    align-items: flex-start;
-    gap: 40px;
-
-}
-
-.seguimiento-imagen{
-    text-align: center;
-}
-
-.seguimiento-imagen h2{
-    font-size: 2rem;
-  font-weight: 700;
-  text-align: center;
-  position: relative;
-  color: #2b2b2b;
-}
-
-.seguimiento-derecha{
-    display: flex;
-  flex-direction: column;
-  gap: 20px;
-}
-
-.beneficios{
-    border: 2px solid;
-    border-radius: 10px;
-    padding: 16px;
-}
-
-.beneficios:nth-of-type(1) h3::before {
-    content: "🏋️ ";
-}
-.beneficios:nth-of-type(2) h3::before {
-    content: "🥗 ";
-}
-.beneficios:nth-of-type(3) h3::before {
-    content: "💻 ";
-}
-.beneficios:nth-of-type(4) h3::before {
-    content: "📞 ";
-}
-.beneficios:nth-of-type(5) h3::before {
-    content: "📈 ";
-}
-
-.seguimiento-imagen img{
-    width: 300px;
-}
-
-.beneficios:nth-of-type(4) {
-background-color: rgb(181, 214, 239);
-  
-}
+@import "planes";
 
 /*--------- RESULTADOS -------*/
 
-.general-resultados{
-    background-color: #eef2f2;
-    
-}
-
-.contenedor-cards {
-        max-width: 900px;
-        padding: 20px;
-        display: flex;
-        justify-content: center;
-        flex-wrap: wrap;
-        gap: 25px;
-        margin: 20px auto;
-}
-
-.resultados-alumnos h2{
-    margin-top: 15px;
-    font-family: Arial, Helvetica, sans-serif;
-    text-align: center;
-    font-weight: 900;
-    font-size: 32px;
-}
-
-.card-testimonio {
-    padding: 16px 8px;
-    width:  360px;
-    margin-bottom: 20px;
-    background-color: #f5f5f5;
-    border-radius: 12px;
-    box-shadow: 0 8px 20px rgba(0, 0, 0, 0.8);
-    text-align: center;
-}
-
-.card-testimonio h3{
-    text-align: center;
-    font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-    color: #243e5c;
-    margin: 10px 0 4px;
-    font-size: 18px;
-}
-
-.card-testimonio p{
-    padding: 15px 20px;
-    font-style: italic;
-    font-size: 13px;
-    color: #444;
-}
-
-.card-testimonio img{
-    width: 100%;
-    height: 250px;
-    object-fit: cover;
-    display: block;
-}
-
-.mentalidad-d {
-  background-color: #2a7c6f;
-  color: white;
-  text-align: center;
-  padding: 50px 20px;
-  border-radius: 12px;
-  margin: 50px auto;
-  max-width: 900px;
-}
-
-.mentalidad-d h2 {
-  font-size: 28px;
-  margin-bottom: 15px;
-}
-
-.mentalidad-d:hover{
-   background-color: #0f4231;
-     color: rgb(167, 255, 218); 
-     box-shadow: 3px 3px 5px
-}
-
-
+@import "resultados";
 
 /*-------- MEDIAQUERIE sobre mí*/
 
